[FEAT] fix save image file logic